User management : root add or remove available tag for a user user can see tags/view/tagId where tagId is an available tag for the current user

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
-AuthName "Restricted Area" 
-AuthType Basic 
-AuthUserFile /home/mehdi/Mehdi/Programmes/www/protected/.htpasswd 
-AuthGroupFile /dev/null 
-require valid-user 
+# AuthName "Restricted Area" 
+# AuthType Basic 
+# AuthUserFile /home/mehdi/Mehdi/Programmes/www/protected/.htpasswd 
+# AuthGroupFile /dev/null 
+# require valid-user 
 
 <IfModule mod_rewrite.c>
    RewriteEngine on
