--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # User specific & automatically generated files #
 #################################################
-#/app/Config/database.php
-app/Model/Datasource/digikam4.db
+/app/Config/core.php
+/app/Config/database.php
+/app/Model/Datasource/digikam4.db
 /app/tmp
 /lib/Cake/Console/Templates/skel/tmp/
 /plugins
